# CPP_practice

./: .gitignore  CMakeLists.txt
Mafia (Task 1)/app/: main.cpp
Mafia (Task 1)/assets/: mafia_config.yaml
Mafia (Task 1)/include/concepts/: mafia_concepts.hpp  player_container.hpp  role_checks.hpp
Mafia (Task 1)/include/core/: game_engine_coro.hpp  game_state.hpp  phases.hpp
Mafia (Task 1)/include/roles/: base_player.hpp  citizen.hpp  detective.hpp  executioner.hpp  human.hpp  i_player.hpp  journalist.hpp  mafia.hpp
Mafia (Task 1)/include/smart/: shared_like.hpp
Mafia (Task 1)/include/util/: gstate_views.hpp
Mafia (Task 1)/include/yaml/: yaml_loader.hpp
Mafia (Task 1)/src/concepts/: role_api_checks.cpp
Mafia (Task 1)/src/roles/: citizen.cpp  maniac.cpp
Mafia (Task 1)/src/yaml/: yaml_loader.cpp
Scheduler (Task 2)/: CMakeLists.txt
Scheduler (Task 2)/analysis_py/: plot_heatmap.py  plot_results.py  run_experiments.py  run_heatmap_experiments.py
Scheduler (Task 2)/analysis_py/TeX/: FPS.tex  analysis.tex
Scheduler (Task 2)/apps/: generator.cpp  research.cpp  sa_par.cpp  sa_seq.cpp
Scheduler (Task 2)/include/: CoolingSchedules.hpp  ICoolingSchedule.hpp  IMutation.hpp  ISolution.hpp  MutationOperators.hpp  ParallelAnnealerManager.hpp  ProblemInstance.hpp  ScheduleSolution.hpp  SimulatedAnnealing.hpp
Scheduler (Task 2)/src/: ProblemInstance.cpp  ScheduleSolution.cpp
app/: main.cpp
assets/: mafia_config.yaml
include/concepts/: role_api.hpp  state_checks.hpp
include/core/: game_config.hpp  game_engine.hpp  moderator.hpp  rng.hpp  types.hpp
include/coro/: scheduler.hpp  task.hpp
include/roles/: doctor.hpp  eavesdropper.hpp  human.hpp  maniac.hpp
include/smart/: shared_like.hpp
include/util/: generator.hpp  logger.hpp
include/yaml/: yaml_loader.hpp
src/concepts/: role_checks.cpp
src/core/: game_engine.cpp  game_engine_coro.cpp  game_state.cpp  moderator.cpp  phases.cpp  rng.cpp
src/roles/: base_player.cpp  detective.cpp  doctor.cpp  human.cpp  mafia.cpp  maniac.cpp
src/yaml/: yaml_loader.cpp
